--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Welcome to Stoppr!</h1>
+<p>Please <%= link_to "Sign Up", new_user_registration_path %> to start tracking your life!</p>
