time elapsed updates in real time, time is formatted, can have multiple timers running at once

--- a/app/views/time_frames/index.html.erb
+++ b/app/views/time_frames/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Previous TImers</h1>
+<h1>Previous Timers</h1>
 <ul>
   <% @time_frames.each do |t| %>
-    <li><%= t.time_elapsed %></li>
+    <%= render 'timer_entry', time_frame: t %>
   <% end %>
 </ul>
