--- a/app/views/time_frames/_timer_entry.html.erb
+++ b/app/views/time_frames/_timer_entry.html.erb
@@ -1,12 +1,17 @@
 <h3>Active Timer</h3>
-<div class="active-timer-container" data-timer-<%= time_frame.id %>='true'>
+<div id='timer-container-<%= time_frame.id %>' class="timer-container"
+  data-timer-<%= time_frame.id %>='true'
+  data-start-time='<%= time_frame.start_time.to_i %>'
+  data-time-elapsed=<%= time_frame.time_elapsed %>
+  data-timer-active=<%= time_frame.active %>
+  data-timer-id=<%= time_frame.id %>>
   <div class="row">
     <div class="col-8">
       <div id='timer-<%= time_frame.id %>-time-elapsed'>
-        <%= time_frame.time_elapsed %>
+        <%= time_frame.formatted_time_elapsed %>
       </div>
     </div>
-    <div id='timer-controls-<%= time_frame.id %>'class="col-4 timer-controls" data-timer-active=<%= time_frame.active %>>
+    <div id='timer-controls-<%= time_frame.id %>'class="col-4 timer-controls">
       <%= link_to "Stop", stop_time_frame_path(time_frame), remote: true, class: 'btn btn-danger stop-timer-btn', hidden: !time_frame.active %>
       <%= link_to "Start", start_time_frame_path(time_frame), remote: true, class: 'btn btn-success start-timer-btn', hidden: time_frame.active %>
     </div>
