--- a/app/views/time_frames/index.html.erb
+++ b/app/views/time_frames/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Previous Timers</h1>
-<ul>
+<ul class='list-group'>
   <% @time_frames.each do |t| %>
+  <li id='timer-list-item-<%= t.id %>' class='list-group-item'>
     <%= render 'timer_entry', time_frame: t %>
+  </li>
   <% end %>
 </ul>
