--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,43 +1,40 @@
-<div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand" href="<%= time_frames_path %>">Stoppr</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+    <a class="navbar-brand" href="<%= time_frames_path %>">Stoppr</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="<%= report_time_frames_path %>">Reports</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <% if current_user %>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <%= current_user.email %>
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <%= link_to "Edit Account", edit_user_registration_path, class: 'dropdown-item' %>
+              <div class="dropdown-divider"></div>
+              <%= link_to "Sign out", destroy_user_session_path, class: "dropdown-item", method: :delete %>
+            </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="<%= report_time_frames_path %>">Reports</a>
+        <% else %>
+          <li class='nav-item'>
+            <%= link_to "Create Account", new_user_registration_path, class:'nav-link' %>
           </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-          <% if current_user %>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <%= current_user.email %>
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <%= link_to "Edit Account", edit_user_registration_path, class: 'dropdown-item' %>
-                <div class="dropdown-divider"></div>
-                <%= link_to "Sign out", destroy_user_session_path, class: "dropdown-item", method: :delete %>
-              </div>
-            </li>
-          <% else %>
-            <li class='nav-item'>
-              <%= link_to "Create Account", new_user_registration_path, class:'nav-link' %>
-            </li>
-            <li class='nav-item'>
-              <%= link_to "Sign in", new_user_session_path, class: 'nav-link' %>
-            </li>
-          <% end %>
-        </ul>
-      </div>
-    </nav>
-
-  </div>
+          <li class='nav-item'>
+            <%= link_to "Sign in", new_user_session_path, class: 'nav-link' %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  </nav>
 </div>
