--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#home-page-container {
+  .home-cta {
+    text-align: center;
+    padding: 7rem 0;
+    h3 { margin-bottom: 4rem; }
+  }
+  #cta-divider {
+    border-color: rgba(0, 0, 0, 0.125);
+    border-width: 1px 0;
+    border-style: solid;
+    padding: 1rem 0;
+    text-align: center;
+    p { margin: 0; }
+  }
+}
