--- a/app/assets/stylesheets/time_frames.scss
+++ b/app/assets/stylesheets/time_frames.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the TimeFrames controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.reports-search-bar {
+  border-color: #dee2e6;
+  border-width: 1px 0;
+  border-style: solid;
+  padding: 1rem 0;
+  margin-bottom: 1rem;
+}
+
+.edit-time-frame-form {
+  min-width: 295px;
+}
+
+.timers-title {
+  // border-color: #dee2e6;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+  padding: 1rem 0;
+  margin-bottom: 1rem;
+}
+
+.timer-controls a.btn { float: right; }
