--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="<%= time_frames_path %>">Stoppr</a>
+    <a class="navbar-brand" href="<%= current_user ? time_frames_path : root_path %>">Stoppr</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,11 +8,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="<%= current_user ? time_frames_path : root_path %>">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="<%= report_time_frames_path %>">Reports</a>
-        </li>
+        <% if current_user %>
+          <li class="nav-item">
+            <a class="nav-link" href="<%= report_time_frames_path %>">Reports</a>
+          </li>
+        <% end %>
       </ul>
       <ul class="navbar-nav ml-auto">
         <% if current_user %>
