--- a/app/views/time_frames/_edit_form.html.erb
+++ b/app/views/time_frames/_edit_form.html.erb
@@ -1,25 +1,22 @@
-<%= form_for time_frame do |f| %>
-  <ul>
-    <% time_frame.errors.full_messages.each do |e| %>
-      <li><%= e %></li>
-    <% end %>
-  </ul>
-  <div class='field form-group'>
-    <%= f.label :time_elapsed %><br>
-    <%= f.text_field :time_elapsed %>
-  </div>
+<div class="edit-time-frame-form px-2 mx-1">
+  <%= form_for time_frame do |f| %>
+    <ul>
+      <% time_frame.errors.full_messages.each do |e| %>
+        <li><%= e %></li>
+      <% end %>
+    </ul>
+    <div class='field form-group'>
+      <%= f.label :time_elapsed %><br>
+      <%= f.text_field :time_elapsed, class: 'form-control time-frames-time-elapsed' %>
+    </div>
 
-  <div class='field form-group'>
-    <%= f.label :description %><br>
-    <%= f.text_field :description %>
-  </div>
+    <div class='field form-group'>
+      <%= f.label :description %><br>
+      <%= f.text_field :description, class: 'form-control' %>
+    </div>
 
-  <div class="field form-group">
-    <%= f.check_box :active %>
-    <%= f.label :active %>
-  </div>
-
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+    <div class='field form-group'>
+      <%= f.submit 'Create', class: 'btn btn-outline-success float-right' %>
+    </div>
+  <% end %>
+</div>
