--- a/app/views/time_frames/report.html.erb
+++ b/app/views/time_frames/report.html.erb
@@ -1,19 +1,66 @@
-<div class="row">
+<div class="row pt-3">
   <div class="col-12">
     <h1>Summary Report</h1>
   </div>
 </div>
+<div class="row reports-search-bar">
+  <div class="col-12">
+    <form class="form-inline ">
+      <div class="input-group mr-2 my-1 my-md-0">
+        <label for='startDate' class='mr-1'>Start Date</label>
+        <input type="date" id='startDate' class='form-control'>
+      </div>
+
+      <div class="input-group mr-2 my-1 my-md-0">
+        <label for='endDate' class='mr-1'>End Date</label>
+        <input type="date" id='endDate' class='form-control'>
+      </div>
+
+      <div class="input-group my-1 my-md-0">
+        <input type="search" name="search" class='form-control mr-2' placeholder="Description">
+        <button class="btn btn-outline-success" type="submit">Apply</button>
+      </div>
+
+    </form>
+  </div>
+</div>
 <div class="row">
-  <div class="col col-md-4 col-sm-12">
+  <div class="col">
+    <h3>Total: <%= format_seconds(@report[:total_time]) %></h3>
+  </div>
+</div>
+<div class="row">
+  <div class="col col-md-6 col-sm-12">
+    <table class='table'>
+      <thead>
+        <tr>
+          <th scope='col'>Description</th>
+          <th scope='col' class='text-right'>Total Time</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% if @total_times.empty? %>
+          <tr>
+            <td colspan="2"><%= link_to "Create a timer", time_frames_path %> before you start fiddling with reports</td>
+          </tr>
+        <% else %>
+          <% @total_times.each do |tt| %>
+            <tr>
+              <td>
+                <%= tt[0] %>
+              </td>
+              <td class='text-right'>
+                <%= format_seconds(tt[1]) %>
+              </td>
+            </tr>
+          <% end %>
+        <% end %>
+      </tbody>
+    </table>
     <ul>
-      <% @total_times.each do |tt| %>
-      <li>
-        <%= tt[0] %>: <%= tt[1] %> seconds
-      </li>
-      <% end %>
     </ul>
   </div>
-  <div class="col col-md-auto">
+  <div class="col col-md-auto float-sm-left">
       <%= pie_chart @report[:data],  @report[:options] %>
   </div>
 </div>
