fixed bug where changing desc cleared time_elapsed

--- a/app/views/time_frames/_edit_form.html.erb
+++ b/app/views/time_frames/_edit_form.html.erb
@@ -16,7 +16,7 @@
     </div>
 
     <div class='field form-group'>
-      <%= f.submit 'Create', class: 'btn btn-outline-success float-right' %>
+      <%= f.submit 'Create Timer', class: 'btn btn-outline-success float-right' %>
     </div>
   <% end %>
 </div>
