fixed js bug where random timers wouldn't update when started

--- a/app/views/time_frames/_timer_entry.html.erb
+++ b/app/views/time_frames/_timer_entry.html.erb
@@ -1,9 +1,9 @@
 <div id='timer-container-<%= time_frame.id %>' class="timer-container"
   data-timer-<%= time_frame.id %>='true'
   data-start-time='<%= time_frame.start_time.to_i %>'
-  data-time-elapsed=<%= time_frame.time_elapsed %>
-  data-timer-active=<%= time_frame.active %>
-  data-timer-id=<%= time_frame.id %>>
+  data-time-elapsed='<%= time_frame.time_elapsed %>'
+  data-timer-active='<%= time_frame.active %>'
+  data-timer-id='<%= time_frame.id %>' >
   <div class="row">
     <div class="col-4">
       <!-- Description: onClick show this form -->
